--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@inrupt/vocab-common-rdf": "^1.0.5",
     "@inrupt/vocab-solid": "^1.0.4",
     "buffer": "^6.0.3",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-intl": "^6.4.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
